--- a/renderer/html/dashboard.html
+++ b/renderer/html/dashboard.html
@@ -6,6 +6,25 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 <body>
+    <section id="menu">
+
+    </section>
+
+
+
+    <section id="theButtons">
+
+    </section>
+
+
+
+    <section id="recentFiles">
+
+    </section>
+
+
+
+
     <h1>Hello World!</h1>
     <p>
         We are using Node.js <span id="node-version"></span>,
