cleaned up placeholder code and edited dashboard

--- a/renderer/html/dashboard.html
+++ b/renderer/html/dashboard.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
     <title>Hello World!</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 <body>
     <section id="menu">
@@ -12,8 +10,16 @@
 
 
 
-    <section id="theButtons">
+    <section id="mainOptions">
 
+        <div id="transcriberLink">
+            <button id="transcriberLinkBtn">Transcribe</button>
+        </div>
+
+        <div id="formatterLink">
+            <button id="formatterLinkBtn">Format</button>
+        </div>
+        
     </section>
 
 
