added transcriber and formatter pages

--- a/renderer/html/dashboard.html
+++ b/renderer/html/dashboard.html
@@ -10,11 +10,11 @@
 
     <section id="mainOptions">
         <div id="transcriberLink">
-            <button id="transcriberLinkBtn">Transcribe</button>
+            <a href="./transcriber.html"><button id="transcriberLinkBtn">Transcribe</button></a>
         </div>
 
         <div id="formatterLink">
-            <button id="formatterLinkBtn">Format</button>
+            <a href="./formatter.html"><button id="formatterLinkBtn">Format</button></a>
         </div>
     </section>
 
