added upload audio file functionality

--- a/renderer/html/transcriber.html
+++ b/renderer/html/transcriber.html
@@ -5,7 +5,14 @@
 </head>
 <body>
     <a href="./dashboard.html"><button>Dashboard</button></a>
+
     <h1>Transcriber</h1>
 
+        <div>
+            <button id="audioFileBtn">Upload Audio File</button>
+        </div>
+
+
+    <script src="../js/transcriber.js"></script>
 </body>
 </html>
