very important update

--- a/renderer/html/transcriber.html
+++ b/renderer/html/transcriber.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    
 </head>
 <body>
     <a href="./dashboard.html"><button>Dashboard</button></a>
@@ -12,6 +12,13 @@
             <button id="audioFileBtn">Upload Audio File</button>
         </div>
 
+        <div id="output" style="margin-top: 10px;">
+
+        </div>
+
+        <button id="openTranscription" style="display: none;">
+            Open Transcription
+        </button>
 
     <script src="../js/transcriber.js"></script>
 </body>
